--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -61,9 +61,8 @@
         <div class="Internationals2">
             <img class="img" src="images/europa.png" alt="tickets">
             <p>Sightseeing in Europe is a fascinating experience where you can discover numerous tourist attractions, an indescribable historical and cultural legacy, and unique gastronomy in the world.
-                The European continent stretches geographically from Asia to the Atlantic Ocean, and from Africa to the Arctic Sea.
-                Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis. Many of the world's most visited and developed countries are in Europe, grouped together as the Baltics, Great Britain and Ireland, the Caucasus, Central Europe, France, Iberia, Italy and Scandinavia, as well as Cyprus, Greece and Turkey and Belarus, part from Russia and Ukraine.
-                Europe covers an area of ​​approximately 10.4 million square kilometers and enjoys an annual number of visitors in the region of 500 million. Many European countries are famous for their rich cultural heritage, spectacular man-made sights, and modern, safe, and reliable transportation. Knowing Europe is visiting its museums, great avenues, enjoying its educated and refined people. Travel between the canals and waterways of Amsterdam, the Eiffel Tower in Paris, the Colosseum in Rome, the Greek temples of Ephesus and Athens, Buckingham Palace in London, and Saint Paul's Cathedral and Plaza Mayor in Madrid
+            The European continent stretches geographically from Asia to the Atlantic Ocean, and from Africa to the Arctic Sea.
+            Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis. Many of the world's most visited and developed countries are in Europe, grouped together as the Baltics, Great Britain and Ireland, the Caucasus, Central Europe, France, Iberia, Italy and Scandinavia, as well as Cyprus, 
             </p>  
         </div>
         <div class="Internationals3">
