--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -62,16 +62,18 @@
             <img class="img" src="images/europa.png" alt="tickets">
             <p>Sightseeing in Europe is a fascinating experience where you can discover numerous tourist attractions, an indescribable historical and cultural legacy, and unique gastronomy in the world.
             The European continent stretches geographically from Asia to the Atlantic Ocean, and from Africa to the Arctic Sea.
-            Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis. Many of the world's most visited and developed countries are in Europe, grouped together as the Baltics, Great Britain and Ireland, the Caucasus, Central Europe, France, Iberia, Italy and Scandinavia, as well as Cyprus, 
+            Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis. Many of the world's most visited and developed countries are in Europe, grouped together as the Baltics, Great Britain and Ireland, the Caucasus, Central Europe, France, Iberia, Italy and Scandinavia,, 
             </p>  
         </div>
         <div class="Internationals3">
-            <img  class="img" src="images/Egypt.png"  alt="cusco">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+            <img  class="img" src="images/Australia.png"  alt="cusco">
+            <p>It is not a very exploited destination but it has many options to visit.
+            Australia also offers us a great variety of contrasts and a spectacular beauty that is not available in other parts of our planet. For example, along the coast we can explore vibrant cities rich in multi-culture, go on a safari to the vast sand islands, trek through its ancient rainforests or scuba dive the Great Barrier Reef. In the interior (or Outback as they call it in Australia) we can explore its national parks and red sand deserts if we want it to be an adventure trip.</p>
         </div>
         <div class="Internationals4">
-            <img class="img" src="images/europa.png" alt="kuelap">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+            <img class="img" src="images/Africa.png" alt="kuelap">
+            <p>It is not a very exploited destination but it has many options to visit.
+            Australia also offers us a great variety of contrasts and a spectacular beauty that is not available in other parts of our planet. For example, along the coast we can explore vibrant cities rich in multi-culture, go on a safari to the vast sand islands, trek through its ancient rainforests or scuba dive the Great Barrier Reef. In the interior (or Outback as they call it in Australia) we can explore its national parks and red sand deserts if we want it to be an adventure trip.</p>
         </div>
 
     </main>    
