--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -62,8 +62,7 @@
             <img class="img" src="images/europa.png" alt="tickets">
             <p>Sightseeing in Europe is a fascinating experience where you can discover numerous tourist attractions, an indescribable historical and cultural legacy, and unique gastronomy in the world.
             The European continent stretches geographically from Asia to the Atlantic Ocean, and from Africa to the Arctic Sea.
-            Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis. Many of the world's most visited and developed countries are in Europe. 
-            </p>  
+            Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis.</p>  
         </div>
         <div class="Internationals3">
             <img  class="img" src="images/europa.png"  alt="cusco">
