--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -55,22 +55,22 @@
             It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points.</p>
         </div>
         <div class="Internationals1">
-            <img class="img" src="images/Egypt.png" alt="passport">
+            <img class="img" src="images/Egypt.png" alt="Egypt">
             <p>Ancient Egypt or Ancient Egypt was a civilization of Antiquity, which originated along the middle and lower reaches of the Nile River, whose history spans more than three millennia. It is considered one of the most important of humanity.1 The original name of the country, especially during the Old Kingdom, was Kemet (Km.t), 'black land', due to the color of the fertilizing silt that covered it during the regular annual flooding the valley that lies on the banks of the Nile River, as opposed to Deshret (dsr.t, 'red earth'), by the sand of the Sahara desert, which covers most of the Egyptian territory.</p>
         </div>
         <div class="Internationals2">
-            <img class="img" src="images/europa.png" alt="tickets">
+            <img class="img" src="images/europa.png" alt="European">
             <p>Sightseeing in Europe is a fascinating experience where you can discover numerous tourist attractions, an indescribable historical and cultural legacy, and unique gastronomy in the world.
             The European continent stretches geographically from Asia to the Atlantic Ocean, and from Africa to the Arctic Sea.
             Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis.</p>  
         </div>
         <div class="Internationals3">
-            <img  class="img" src="images/europa.png"  alt="cusco">
+            <img  class="img" src="images/australia.png"  alt="Australia">
             <p>It is not a very exploited destination but it has many options to visit.
             Australia also offers us a great variety of contrasts and a spectacular beauty that is not available in other parts of our planet. For example, along the coast we can explore vibrant cities rich in multi-culture, go on a safari to the vast sand islands, trek through its ancient rainforests or scuba dive the Great Barrier Reef. In the interior (or Outback as they call it in Australia) we can explore its national parks and red sand deserts if we want it to be an adventure trip.</p>
         </div>
         <div class="Internationals4">
-            <img class="img" src="images/europa.png" alt="kuelap">
+            <img class="img" src="images/Africa.png" alt="Africa">
             <p>It is not a very exploited destination but it has many options to visit.
             Australia also offers us a great variety of contrasts and a spectacular beauty that is not available in other parts of our planet. For example, along the coast we can explore vibrant cities rich in multi-culture, go on a safari to the vast sand islands, trek through its ancient rainforests or scuba dive the Great Barrier Reef. In the interior (or Outback as they call it in Australia) we can explore its national parks and red sand deserts if we want it to be an adventure trip.</p>
         </div>
