--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
+    <a href="https://wa.me/34555005500/?text=tu%20texto%20personalizado" target="_blank">
+        <img src="logo.png" width="50" height="50">
+    </a>
     <h5>7866654321 | 511987801008</h5>
     <header>
         <a class="logo" href="#" >
@@ -56,6 +59,7 @@
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
     <p><a href="index.html" target="_blank">Home</a></p>
     <p><a href="#" target="_blank">Internationals Destinations</a></p>
+    
     <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
