--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -58,7 +58,7 @@
 <footer>
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
     <p><a href="index.html" target="_blank">Home</a></p>
-    <p><a href="#" target="_blank">Internationals Destinations</a></p>
+    <p><a href="international.html" target="_blank">Internationals Destinations</a></p>
     
     <div class="social">
         <a href="https://facebook.com" target="_blank">
