--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <a href="https://wa.me/34555005500/?text=tu%20texto%20personalizado" target="_blank">
-        <img src="logo.png" width="50" height="50">
+    <a href="https://wa.me/17866125793/?text=tu%20texto%20personalizado" target="_blank">
+        <img src="images/logo-wasap.png" width="30" height="30">
     </a>
     <h5>7866654321 | 511987801008</h5>
     <header>
