--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -36,23 +36,28 @@
         </section>
     </div>
     <main id="article">
-        <article>
-            <img src="" alt="">
-            <h4></h4>
-        </article>
-        <article>
-            <img src="" alt="">
-            <h4></h4>
-        </article>
-        <article>
-            <img src="" alt="">
-            <h4></h4>
-        </article>
-        <article>
-            <img src="" alt="">
-            <h4></h4>
-        </article>
-        
+        <div class="article"></div>
+            <article>
+                <img src="images/trasport.png" alt="Transport">
+                <h4>Transport</h4>
+                <p>We know the tastes of our clients so that they are calm throughout their stay</p>
+            </article>
+            <article>
+                <img src="images/mews.png" alt="News">
+                <h4>News</h4>
+                <p>Keep them in touch about tourism issues and more...</p>
+            </article>
+            <article>
+                <img src="images/hotel.png" alt="Hotels">
+                <h4>Hotels</h4>
+                <p>The best Hotels in the market where they are located</p>
+            </article>
+            <article>
+                <img src="images/guide.png" alt="Personalized Guides">
+                <h4>Personalized Guides</h4>
+                <P>Tourist guides for better information in their destinations</P>
+            </article>
+        </div>
 
     </main>    
 <footer>
