--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NyM Travel Agency</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/styles.css">
+    <!--- <link rel="stylesheet" href="style/styles.css">  -->
 </head>
 <body>
     <h5>7866654321 | 511987801008</h5>
