--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -77,6 +77,18 @@
             <img src="images/instagram.png" alt="instagram icon">
         </a>
         </div>
+        <h2>Site Map</h2>
+        <div class="sitemap">
+        <div class="sm-home">Home</div>
+        <div class="sm-Peru">
+            Get to Know Peru
+            <!-- this page will have a name later -->
+        </div>
+        <div class="sm-International">Internationals Destinations</div>
+
+        <div class="top">&nbsp;</div>
+        <div class="left">&nbsp;</div>
+        <div class="right">&nbsp;</div>
     </footer>
 </body>
 </html>
