--- a/aboutme/personalsite/building.html
+++ b/aboutme/personalsite/building.html
@@ -14,7 +14,7 @@
             <div class="tarjetacarrusel" id="tarjetacarrusel-1">
                 A
             </div>
-            <div class="flechacarrusel">
+            <div class="flechacarrusel">paruWO82vo
                 <a href="#itemcarrusel-3">
                     <i class="fas fa-chevron-left"></i>
                 </a>
