--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NyM Travel Agency</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <!--- <link rel="stylesheet" href="style/styles.css">  -->
+    <link rel="stylesheet" href="style/styles.css"> 
 </head>
 <body>
     <h5>7866654321 | 511987801008</h5>
@@ -92,18 +92,17 @@
             <img src="images/instagram.png" alt="instagram icon">
         </a>
         </div>
-        <h2>Site Map</h2>
-        <div class="sitemap">
+        <!--<h2>Site Map</h2>
         <div class="sm-home">Home</div>
         <div class="sm-Peru">
             Get to Know Peru
-            <!-- this page will have a name later -->
+             this page will have a name later 
         </div>
         <div class="sm-International">Internationals Destinations</div>
 
         <div class="top">&nbsp;</div>
         <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
+        <div class="right">&nbsp;</div> -->
     </div>
     
     
