--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NyM Travel Agency</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <!--- <link rel="stylesheet" href="style/styles.css">  -->
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
     <a href="https://wa.me/17866125793/?text=tu%20texto%20personalizado" target="_blank">
@@ -77,18 +77,18 @@
             <img src="images/instagram.png" alt="instagram icon">
         </a>
         </div>
-        <h2>Site Map</h2>
+        <!--  <h2>Site Map</h2>
         <div class="sitemap">
         <div class="sm-home">Home</div>
         <div class="sm-Peru">
             Get to Know Peru
-            <!-- this page will have a name later -->
+            <!-- this page will have a name later 
         </div>
         <div class="sm-International">Internationals Destinations</div>
 
         <div class="top">&nbsp;</div>
         <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
+        <div class="right">&nbsp;</div>   -->
     </footer>
 </body>
 </html>
