--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -36,27 +36,27 @@
         </section>
     </div>
     <main id="article">
-        <div class="article"></div>
-            <article>
-                <img src="images/trasport.png" alt="Transport">
-                <h4>Transport</h4>
-                <p>We know the tastes of our clients so that they are calm throughout their stay</p>
-            </article>
-            <article>
-                <img src="images/mews.png" alt="News">
-                <h4>News</h4>
-                <p>Keep them in touch about tourism issues and more...</p>
-            </article>
-            <article>
-                <img src="images/hotel.png" alt="Hotels">
-                <h4>Hotels</h4>
-                <p>The best Hotels in the market where they are located</p>
-            </article>
-            <article>
-                <img src="images/guide.png" alt="Personalized Guides">
-                <h4>Personalized Guides</h4>
-                <P>Tourist guides for better information in their destinations</P>
-            </article>
+        <div  class="transport">
+            <img class="img" src="images/trasport.png" alt="transport">
+            <h3>Transport</h3>
+            <p>We know the tastes of our clients so that they are calm throughout their stay
+            </p>
+        </div>
+        <div  class="news">
+            <img class="img" src="images/mews.png" alt="news">
+            <h3>News</h3>
+            <p>Keep them in touch about tourism issues and more...</p>  
+        </div>
+        <div class="hotels">
+            <img class="img" src="images/hotel.png" alt="hotels">
+            <h3>hotels</h3>
+            <p>The best Hotels in the market where they are located</p>
+        </div>
+        <div class="service">
+            <img class="img" src="images/guide.png" alt="service">
+            <h3>Personalized Guides</h3>
+            <p>Tourist guides for better information in their destinations</p>
+        </div>
         </div>
 
     </main>    
@@ -77,18 +77,7 @@
             <img src="images/instagram.png" alt="instagram icon">
         </a>
         </div>
-        <!--  <h2>Site Map</h2>
-        <div class="sitemap">
-        <div class="sm-home">Home</div>
-        <div class="sm-Peru">
-            Get to Know Peru
-            <!-- this page will have a name later 
-        </div>
-        <div class="sm-International">Internationals Destinations</div>
-
-        <div class="top">&nbsp;</div>
-        <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>   -->
+        
     </footer>
 </body>
 </html>
