--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <a href="https://wa.me/17866125793/?text=tu%20texto%20personalizado" target="_blank">
-        <img src="images/logo-wasap.png" width="30" height="30">
-    </a>
     <h5>7866654321 | 511987801008</h5>
     <header>
         <a class="logo" href="#" >
@@ -49,7 +46,7 @@
         </div>
         <div class="hotels">
             <img class="img" src="images/hotel.png" alt="hotels">
-            <h3>hotels</h3>
+            <h3>Hotels</h3>
             <p>The best Hotels in the market where they are located</p>
         </div>
         <div class="service">
@@ -76,8 +73,10 @@
         <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
+        <a href="https://wa.me/17866125793/?text=your%20text" target="_blank">
+            <img src="images/logo-wasap.png" width="60" height="60">
+        </a>
         </div>
-        
     </footer>
 </body>
 </html>
