--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -76,19 +76,10 @@
         <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
+        <a href="https://wa.me/17866125793/?text=your%20text" target="_blank">
+            <img src="images/logo-wasap.png" width="60" height="60">
+        </a>
     </div>
-    <!-- <h2>Site Map</h2>
-        <div class="sitemap">
-        <div class="sm-home">Home</div>
-        <div class="sm-Peru">
-            Get to Know Peru
-            <!-- this page will have a name later 
-        </div>
-        <div class="sm-International">Internationals Destinations</div>
-
-        <div class="top">&nbsp;</div>
-        <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>  -->
 </footer>
 </body>
 </html>
