--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -35,21 +35,25 @@
     <main id="middle">
         <div  class="passport">
             <img class="img" src="images/passport.png" alt="passport">
+            <h2>Passport</h2>
             <p>Through the information received by you, we will be able to contact you to find out what are the things that are in your possession, either to begin with, the passport, which is one of the most important elements of our work, we will see its validation time and If its expiration is close, we will give you some (advice) to be able to process them.
             We give it the necessary emphasis since it is the only document that will help us to know more about your data and avoid any inconvenience in the whole process that you will win with us.</p>
         </div>
         <div  class="tickets">
             <img class="img" src="images/tickets.png" alt="tickets">
+            <h2>tickets</h2>
             <p>Tickets are an essential art in our work and looking for the best for you we need to work with all the series that you deserve, knowing all the possible information about your personal data, as well as your time availability in order to provide you with the best service, since either with the tickets, the lodging and the areas that you want to know.
                 We have more than 10 years of experience and we would like to serve you with the quality we have.</p>  
         </div>
         <div class="cusco">
             <img class="img" src="images/cusco.jpeg" alt="cusco">
+            <h2>Cusco</h2>
             <p>Cusco is one of the 7 new wonders of the world and will not be so for a long time and its infrastructure is totally impressive. Trust us to serve you and you will see that Machu Picchu will be an experience you will never forget.
             From the arrival at the Cusco Airport you will see that this area is full of beauty and with the best tranquility you will be able to see the city, with a lot of colonial influence and how many more attractions both in the city and its surroundings.</p>
         </div>
         <div class="kuelap">
             <img class="img" src="images/kuelap.png" alt="kuelap">
+            <h2>Kuelap</h2>
             <p>Kuélap, or Cuélap, is an important pre-Inca archaeological site located in the northeastern Andes of Peru, in the Province of Luya. It was built by the Chachapoyas culture.
 
             It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points.</p>
