--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -32,24 +32,24 @@
             </div>   
         </section>
     </div>
-    <main id="article">
-        <div  class="transport">
+    <main id="middle">
+        <div  class="passport">
             <img class="img" src="images/trasport.png" alt="transport">
             <h3>Transport</h3>
             <p>We know the tastes of our clients so that they are calm throughout their stay
             </p>
         </div>
-        <div  class="news">
+        <div  class="tickets">
             <img class="img" src="images/mews.png" alt="news">
             <h3>News</h3>
             <p>Keep them in touch about tourism issues and more...</p>  
         </div>
-        <div class="hotels">
+        <div class="cusco">
             <img class="img" src="images/hotel.png" alt="hotels">
             <h3>Hotels</h3>
             <p>The best Hotels in the market where they are located</p>
         </div>
-        <div class="service">
+        <div class="kuelap">
             <img class="img" src="images/guide.png" alt="service">
             <h3>Personalized Guides</h3>
             <p>Tourist guides for better information in their destinations</p>
