--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -33,20 +33,24 @@
         </section>
     </div>
     <main id="middle">
-        <div  class="passport">
+        <div  class="passport1">
             <img class="img" src="images/passport.png" alt="passport">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+            <h2>Passport</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.! </p>
         </div>
-        <div  class="tickets">
+        <div  class="tickets1">
             <img class="img" src="images/tickets.png" alt="tickets">
+            <h2>tickets</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eligendi dolor molestiae eveniet debitis excepturi dolorum possimus accusamus placeat suscipit. Iure natus nihil at molestiae eum? Eveniet maxime in quis veritatis delectus perferendis aperiam voluptas, quisquam id distinctio ullam iste quae quasi eius harum asperiores, sed alias exercitationem nemo quas.</p>  
         </div>
-        <div class="cusco">
+        <div class="cusco1">
             <img class="img" src="images/cusco.jpeg" alt="cusco">
+            <h2>Cusco</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil animi pariatur eum odit iure eius repellat facere necessitatibus error, recusandae, qui debitis! Dolorum cum expedita voluptatibus laborum velit dolorem fugiat itaque non numquam, blanditiis rerum praesentium corrupti debitis eaque inventore iure libero quos eligendi repellendus repudiandae nesciunt sint molestias! Consectetur!</p>
         </div>
-        <div class="kuelap">
+        <div class="kuelap1">
             <img class="img" src="images/kuelap.png" alt="kuelap">
+            <h2>Kuelap</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
         </div>
 
@@ -54,9 +58,9 @@
             <img class="img1" src="images/kuelap1.webp" alt="passport">
             
         </div>
-        <div class="text">
+        <div class="text1">
             <h2>Kuelap<h2>  
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+            <p>Amazonas was the cradle of one of Peru’s major pre-Hispanic cultures: the Chachapoyas. It was here that ancient people built Kuelap, an imposing stone structure protected by an outer wall up to 20 meters high, situated at the top of a mountain amid a rugged landscape. Until recently, the only way to reach this archaeological site was on foot. </p>
         </div>
         
 
