--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -41,7 +41,7 @@
         </div>
         <div  class="tickets">
             <img class="img" src="images/tickets.png" alt="tickets">
-            <h2>tickets</h2>
+            <h2>Tickets</h2>
             <p>Tickets are an essential art in our work and looking for the best for you we need to work with all the series that you deserve, knowing all the possible information about your personal data, as well as your time availability in order to provide you with the best service, since either with the tickets, the lodging and the areas that you want to know.
                 We have more than 10 years of experience and we would like to serve you with the quality we have.</p>  
         </div>
