--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="local">
-            <img class="img1" src="images/kuelap1.webp" alt="passport">
+            <img class="img1" src="images/kuelap1.jpg" alt="kuelap">
             
         </div>
         <div class="text1">
