--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -16,7 +16,8 @@
         <div class="position">
             <a href="index.html" class="nav-link">Home |</a>
             <a href="peru.html" class="nav-link">Get to Know Peru |</a>
-            <a href="international.html" class="nav-link">Internationals Destinations</a>
+            <a href="international.html" class="nav-link">Internationals Destinations | </a>
+            <!-- <a href="formulario.html" target="_blank"> Contact Us</a> -->
         </div>
     </header>
     <div id="hero">
@@ -58,9 +59,10 @@
     </main>    
 <footer>
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
-    <p><a href="index.html" target="_blank">Home</a></p>
-    <p><a href="peru.html" target="_blank">Get to Know Peru</a></p>
-    <p><a href="international.html" target="_blank">Internationals Destinations</a></p>
+    <p><a href="index.html"  <!--target="_blank" --> Home</a></p>
+    <p><a href="peru.html" <!-- target="_blank" --> Get to Know Peru</a></p> 
+    <p><a href="international.html" <!-- target="_blank" --> Internationals Destinations</a></p>
+    <p></p><a href="formulario.html"> Contact Us</a></p>
     
     <div class="social">
         <a href="https://facebook.com" target="_blank">
@@ -72,7 +74,7 @@
         <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
-        <a href="https://wa.me/17866125793/?text=your%20text" target="_blank">
+        <a href="https://wa.me/51987801008/?text=your%20text" target="_blank">
             <img src="images/logo-wasap.png" width="60" height="60">
         </a>
         </div>
