--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -16,7 +16,8 @@
         <div class="position">
             <a href="index.html" class="nav-link">Home |</a>
             <a href="peru.html" class="nav-link">Get to Know Peru |</a>
-            <a href="international.html" class="nav-link">Internationals Destinations</a>
+            <a href="international.html" class="nav-link">Internationals Destinations | </a>
+            <!-- <a href="formulario.html" target="_blank"> Contact Us</a>  -->
         </div>
     </header>
     <div id="hero">
@@ -79,7 +80,7 @@
         <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
-        <a href="https://wa.me/17866125793/?text=your%20text" target="_blank">
+        <a href="https://wa.me/51987801008/?text=your%20text" target="_blank">
             <img src="images/logo-wasap.png" width="60" height="60">
         </a>
     </div>
