--- a/aboutme/personalsite/carrusel.html
+++ b/aboutme/personalsite/carrusel.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="carrusel.css">
+<link rel="stylesheet" href="style/carrusel.css">
 
 </head>
 <body>
@@ -11,19 +11,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="Laguna_Llanganuco_Ancash.jpg" style="width:100%">
+  <img src="images/Lagunas de Llanganuco.jpg" style="width:100%">
   <div class="text">Laguna de Llanganuco</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="Montaña de Colores Cusco.jpg" style="width:100%">
+  <img src="images/Montaña de Colores Cusco.jpg" style="width:100%">
   <div class="text">Montaña de Colores Cusco</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="Catarata de Gocta.jpg" style="width:100%">
+  <img src="images/Catarata de Gocta.jpg" style="width:100%">
   <div class="text">Catarata de Gocta</div>
 </div>
 
