--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -17,7 +17,7 @@
             <a href="index.html" class="nav-link">Home |</a>
             <a href="peru.html" class="nav-link">Get to Know Peru |</a>
             <a href="international.html" class="nav-link">Internationals Destinations |</a>
-            <!-- <a href="formulario.html" target="_blank"> Contact Us</a>  -->
+            <a href="contactus.html" target="_blank"> Contact Us</a>  
         </div>
     </header>
     <div id="hero">
