--- a/aboutme/personalsite/contactus.html
+++ b/aboutme/personalsite/contactus.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="style/contactus.css">
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
+    <header>
+        <a class="logo" href="#" >
+            <img src="images/logo.png" alt="NyM Travel">
+        </a>
+        <div class="position">
+            <a href="index.html" class="nav-link">Home |</a>
+            <a href="peru.html" class="nav-link">Get to Know Peru |</a>
+            <a href="international.html" class="nav-link">Internationals Destinations |</a>
+        </div>
+    </header>
     <div id="feedback">
         <form action="/my-handling-form-page" method="post">
             <ul>
