--- a/aboutme/personalsite/perucopy.html
+++ b/aboutme/personalsite/perucopy.html
@@ -37,7 +37,7 @@
 
       Antes de el carrusel         -->
 
-      <!-- --><div class="slideshow-container">
+    <div class="slideshow-container">
 
 
         <div class="mySlides fade">
@@ -125,7 +125,7 @@
             
         </div>
         <div class="text1">
-            <h2>Kuelap<h2>  
+            <h2>Kuelap</h2>  
             <p>Amazonas was the cradle of one of Peru’s major pre-Hispanic cultures: the Chachapoyas. It was here that ancient people built Kuelap, an imposing stone structure protected by an outer wall up to 20 meters high, situated at the top of a mountain amid a rugged landscape. Until recently, the only way to reach this archaeological site was on foot. </p>
         </div>
         
@@ -147,7 +147,7 @@
             <img src="images/instagram.png" alt="instagram icon">
         </a>
         <a href="https://wa.me/51987801008/?text=your%20text" target="_blank">
-            <img src="images/logo-wasap.png" width="60" height="60">
+            <img src="images/logo-wasap.png" width="60" height="60" alt="wasap icon">
         </a>
     </div>
 </footer>
