--- a/aboutme/personalsite/perucopy.html
+++ b/aboutme/personalsite/perucopy.html
@@ -109,8 +109,8 @@
             
         </div>
         <div class="text1">
-            <h2>Kuelap</h2>  
-            <p>Amazonas was the cradle of one of Peru’s major pre-Hispanic cultures: the Chachapoyas. It was here that ancient people built Kuelap, an imposing stone structure protected by an outer wall up to 20 meters high, situated at the top of a mountain amid a rugged landscape. Until recently, the only way to reach this archaeological site was on foot. </p>
+            <h2>KUELAP</h2>  
+            <h2>Amazonas was the cradle of one of Peru’s major pre-Hispanic cultures: the Chachapoyas. It was here that ancient people built Kuelap, an imposing stone structure protected by an outer wall up to 20 meters high, situated at the top of a mountain amid a rugged landscape. Until recently, the only way to reach this archaeological site was on foot. </h2>
         </div>
         
 
